--- a/src/App.css
+++ b/src/App.css
@@ -69,9 +69,9 @@ hr {
 
 #map {
   bottom:0px;
-  height: 100%;
-  left: 362px;
-  position: absolute;
+  height: 90vh;
+  /* left: 362px; */
+  /* position: absolute; */
   right: 0px;
 }
 
