--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@
   background-color: #282c34;
   min-height: 10vh;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
@@ -45,7 +45,11 @@ body {
 }
 
 input {
-  font-size: 12px;
+  font-size: 20px;
+  border-radius: 18px;
+  border: 2px solid #00d8ff;
+  width: 300px;
+
 }
 
 h1 {
