--- a/src/App.css
+++ b/src/App.css
@@ -52,6 +52,15 @@ input {
 
 }
 
+button {
+  /* font-size: 20px; */
+  /* border-radius: 18px; */
+  /* border: 2px solid #00d8ff; */
+  /* width: 300px; */
+  margin-left: 15px;
+
+}
+
 h1 {
   color: #525454;
   font-size: 22px;
